2001-08-16  Darin Adler  <darin@bentspoon.com>

	* libnautilus-private/nautilus-volume-monitor.c:
	(nautilus_volume_monitor_get_mount_name_for_display):
	Corrected a backwards g_return_if_fail!

2001-08-15  Darin Adler  <darin@bentspoon.com>

	A pass at cleaning up the volume monitor. Made all the details of
	NautilusVolume private.

	* libnautilus-private/filesystem-attributes.xml: Changed the
	"description" string to be named "default_volume_name" and also
	marked it to be localized.
	
	* libnautilus-private/nautilus-file-utilities.h:
	* libnautilus-private/nautilus-file-utilities.c:
	(nautilus_get_data_file_path):
	Added a new utility function to locate a file that's either in the
	user's directory or in the Nautilus datadir.
	
	* src/nautilus-property-browser.c: (read_browser_xml): Use
	nautilus_get_data_file_path.

	* libnautilus-private/nautilus-trash-directory.c:
	(get_trash_volume):
	* libnautilus-private/nautilus-trash-monitor.c:
	(add_one_volume_trash):
	* src/file-manager/fm-desktop-icon-view.c: (volume_in_black_list),
	(create_unique_volume_name), (create_mount_link),
	(volume_unmounted_callback), (update_disks_menu):
	* src/nautilus-application.c: (volume_mounted_callback),
	(volume_unmounted_callback):
	* src/nautilus-bookmark-list.c:
	(nautilus_bookmark_list_get_file_path):
	Use only calls from the NautilusVolume public API -- no getting at
	the structure directly. Also fix callers that were using
	nautilus_volume_monitor_get_volume_mount_uri to correctly
	understand that they get the mount path, not the mount URI.
	
	* libnautilus-private/nautilus-volume-monitor.h:
	* libnautilus-private/nautilus-volume-monitor.c:
	(load_file_system_table): Fix storage leaks. Use the new
	nautilus_get_data_file_path. Translate the default volume names as
	they are loaded. Check for duplicate entries while loading the
	table. Don't bother checking the name of the root node, since
	there are plenty of other things about the file that we don't